--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,19 +14,23 @@
 		}
 	},
 	"runArgs": [
-		"--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined",
+		"--cap-add=SYS_PTRACE",
+		"--security-opt",
+		"seccomp=unconfined",
 		// Mount go mod cache
-		"-v", "agentcontroller-gomodcache:/go/pkg",
+		"-v",
+		"agentcontroller-gomodcache:/go/pkg",
 		// Cache vscode exentsions installs and homedir
-		"-v", "agentcontroller-vscodecache:/root/.vscode-server",
+		"-v",
+		"agentcontroller-vscodecache:/root/.vscode-server",
 		// Keep command history 
-		"-v", "agentcontroller-bashhistory:/root/commandhistory",
+		"-v",
+		"agentcontroller-bashhistory:/root/commandhistory",
 	],
-
 	"workspaceMount": "src=${localWorkspaceFolder},dst=/workspace,type=bind,consistency=delegated",
 	"workspaceFolder": "/workspace",
 	// Set *default* container specific settings.json values on container create.
-	"settings": { 
+	"settings": {
 		"go.toolsManagement.checkForUpdates": "local",
 		"go.useLanguageServer": true,
 		"go.gopath": "/go",
@@ -40,20 +44,18 @@
 			// "watchFileChanges": true, // watch file changes outside of the editor (deprecated)
 			"deepCompletion": true // enable deep completion
 		},
-		"go.lintTool":"golangci-lint",
+		"go.lintTool": "golangci-lint",
 		"go.lintFlags": [
-		"--fast"
+			"--fast"
 		]
 	},
-	
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"golang.Go"
+		"golang.Go",
+		"hashicorp.terraform"
 	],
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [9000],
-
 	// Use 'portsAttributes' to set default properties for specific forwarded ports. More info: https://code.visualstudio.com/docs/remote/devcontainerjson-reference.
 	"portsAttributes": {
 		"9000": {
@@ -61,15 +63,12 @@
 			"onAutoForward": "notify"
 		}
 	},
-
 	// Use 'otherPortsAttributes' to configure any ports that aren't configured using 'portsAttributes'.
 	// "otherPortsAttributes": {
 	// 		"onAutoForward": "silent"
 	// },
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "go version",
-
 	// Uncomment to connect as a non-root user. More info: https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "vscode"
 }
