have acc tests run, fix wrong array expand

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
 			// Use -bullseye variants on local arm64/Apple Silicon.
 			"VARIANT": "1.18-bullseye",
 			// Options
-			"NODE_VERSION": "lts/*"
+			"NODE_VERSION": "lts/*",
+			"TF_VERSION": "1.1.9",
 		}
 	},
 	"runArgs": [
